# satisfontory

./: .gitignore  main.py  package-lock.json  package.json  parse-blueprint.js  pyproject.toml  save-blueprint.js
base_blueprint/: New Blueprint 2.json  New Blueprint.json
parser/: __init__.py  blueprint.py  contours.py  fill.py  flattening.py  geometry.py  glyph.py  pipeline.py  rectangles.py
tests/: conftest.py  test_blueprint.py  test_contours.py  test_fill.py  test_flattening.py  test_geometry.py  test_glyph.py  test_pipeline.py  test_rectangles.py
